--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -224,6 +224,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="UploadedFiles\" />
     <Folder Include="Views\FileUpload\" />
   </ItemGroup>
   <ItemGroup>
